--- a/batch-release-etl/notebooks/etl_notebook.ipynb
+++ b/batch-release-etl/notebooks/etl_notebook.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    Good air quality\n",
-      "Name: category, dtype: object\n"
+      "    latitude   longitude       air quality\n",
+      "0  40.712776  -74.005974  Good air quality\n",
+      "1  34.052235 -118.243685  Good air quality\n"
      ]
     }
    ],
@@ -24,27 +25,49 @@
     "sys.path.append(os.path.abspath('/Users/psf/Projects/pylab/charla-python-mexico/batch-release-etl'))\n",
     "from config.settings import AIR_QUALITY_API\n",
     "\n",
-    "url = AIR_QUALITY_API\n",
     "\n",
-    "payload = {\n",
-    "    \"location\": {\n",
-    "        \"latitude\": 29.986176,\n",
-    "        \"longitude\": -114.016919\n",
-    "    }\n",
-    "}\n",
+    "class AirQualityAPI:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.url = AIR_QUALITY_API\n",
     "\n",
-    "payload_json = json.dumps(payload)\n",
-    "response = requests.post(url, data=payload_json, headers={'Content-Type': 'application/json'})\n",
+    "    def get_air_quality(self, latitude, longitude):\n",
+    "        payload = {\n",
+    "            \"location\": {\n",
+    "                \"latitude\": latitude,\n",
+    "                \"longitude\": longitude\n",
+    "            }\n",
+    "        }\n",
+    "        payload_json = json.dumps(payload)\n",
+    "        response = requests.post(self.url, data=payload_json, headers={'Content-Type': 'application/json'})\n",
     "\n",
-    "if response.status_code == 200:\n",
-    "    data = response.json()\n",
-    "    indexes_data = data.pop('indexes')[0]\n",
-    "    color_data = indexes_data.pop('color')\n",
-    "    flat_data = {**data, **indexes_data, **{'color_' + k: v for k, v in color_data.items()}}\n",
-    "    df = pd.DataFrame([flat_data])\n",
-    "    print(df['category'])\n",
-    "else:\n",
-    "    print(\"Error:\", response.status_code)"
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            indexes_data = data.pop('indexes')[0]\n",
+    "            return indexes_data.get('category', None)\n",
+    "        else:\n",
+    "            print(\"Error:\", response.status_code)\n",
+    "            return None\n",
+    "\n",
+    "    def update_data_with_categories(self):\n",
+    "        categories = []\n",
+    "        for _, row in self.data.iterrows():\n",
+    "            category = self.get_air_quality(row['latitude'], row['longitude'])\n",
+    "            categories.append(category)\n",
+    "        \n",
+    "        self.data['air quality'] = categories\n",
+    "        return self.data\n",
+    "    \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    df = pd.DataFrame({\n",
+    "    'latitude': [40.712776, 34.052235],\n",
+    "    'longitude': [-74.005974, -118.243685]\n",
+    "    })\n",
+    "\n",
+    "    api = AirQualityAPI(df)\n",
+    "    df_updated = api.update_data_with_categories()\n",
+    "    print(df_updated)"
    ]
   }
  ],
