--- a/batch-release-etl/notebooks/etl_notebook.ipynb
+++ b/batch-release-etl/notebooks/etl_notebook.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    latitude   longitude       air quality\n",
-      "0  40.712776  -74.005974  Good air quality\n",
-      "1  34.052235 -118.243685  Good air quality\n"
+      "    latitude   longitude           air quality\n",
+      "0  40.712776  -74.005974      Good air quality\n",
+      "1  34.052235 -118.243685  Moderate air quality\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('/Users/psf/Projects/pylab/charla-python-mexico/batch-release-etl'))\n",
+    "sys.path.append(os.getcwd())\n",
     "from config.settings import AIR_QUALITY_API\n",
     "\n",
     "\n",
