--- a/batch-release-etl/notebooks/etl_notebook.ipynb
+++ b/batch-release-etl/notebooks/etl_notebook.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/Users/psf/Projects/pylab/charla-python-mexico/batch-release-etl/environments/.env\n",
+      "https://airquality.googleapis.com/v1/currentConditions:lookup?key=AIzaSyAzxYLhyfRew9B_ACsYgILb9WTz7lVTw-Q\n",
       "    latitude   longitude           air quality\n",
-      "0  40.712776  -74.005974      Good air quality\n",
+      "0  40.712776  -74.005974  Moderate air quality\n",
       "1  34.052235 -118.243685  Moderate air quality\n"
      ]
     }
@@ -20,10 +22,12 @@
     "import json\n",
     "import pandas as pd\n",
     "import os\n",
-    "import sys\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "sys.path.append(os.getcwd())\n",
-    "from config.settings import AIR_QUALITY_API\n",
+    "root_path = os.path.dirname(os.getcwd())\n",
+    "file_env = f'{root_path}/environments/.env'\n",
+    "load_dotenv(dotenv_path=file_env)\n",
+    "AIR_QUALITY_API = os.getenv('AIR_QUALITY_API')\n",
     "\n",
     "\n",
     "class AirQualityAPI:\n",
